--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -24,7 +24,7 @@
       </activity>
       <meta-data
           android:name="com.google.android.geo.API_KEY"
-          android:value="AIzaSyCeC5WbIO6LicfEKq8II_vCaYugxz7iyjA"/> <!-- Your key goes here. -->
+          android:value=""/> <!-- Your key goes here. -->
  
    <!-- You will also only need to add this uses-library tag -->
         <uses-library android:name="org.apache.http.legacy" android:required="false"/>
